Fixed spacing in sample slider

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ ol[class] {
 }
 
 :root {
-  --clr-light-form: #eef1f1;
+  --clr-light-form: #f0f3f3;
   --clr-med-new: #c9c9c9;
   --clr-med-lighter: #d3d8d8;
   --clr-med-light: #cccfcf;
@@ -638,7 +638,7 @@ body.active::after {
   border: none;
   height: 0.5rem;
   width: 0.5rem;
-  margin: 0 1rem;
+  margin: 0 0.75rem;
   padding: 0.375rem;
   cursor: pointer;
   background: var(--clr-med-new);
@@ -1144,10 +1144,8 @@ body.active::after {
     background-color: var(--clr-light-form);
   }
 
-  @media (min-width: 1280px) {
-    .side-by-side-text.payment {
-      margin-top: 1rem;
-    }
+  .side-by-side-text.payment {
+    margin-top: 1.25rem;
   }
 
   .section-subheader--side {
@@ -1166,8 +1164,8 @@ body.active::after {
 }
 
 .section-subheader--rates {
-  padding-right: 1.625rem;
-  padding-left: 1.625rem;
+  margin-right: 1.625rem;
+  margin-left: 1.625rem;
 }
 
 .section-paragraph--rates {
@@ -1257,24 +1255,22 @@ ul.tier--list {
   width: 100%;
   height: auto;
   margin: 0 auto;
-  padding: 0.5rem 0;
+  padding: 0.75rem 0;
   position: relative;
-  /* border-bottom: 1px solid var(--clr-med-lighter); */
 }
 
 .sample-slider--image-static {
   position: relative;
   width: 85%;
   height: auto;
-  margin: auto;
+  margin: 0 auto;
   object-fit: contain;
   max-width: 560px;
 }
 
 @media (min-width: 768px) {
   .tier--example-container {
-    padding-top: 0.25rem;
-    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
   }
 
   .sample-slider--image-static {
@@ -1516,7 +1512,6 @@ ul.tier--list {
     grid-template-columns: 40% 1fr;
     column-gap: 5%;
     border-top: 1px solid var(--clr-med-lighter);
-    padding: 0.25rem;
   }
 
   .sample-slider--image-static {
@@ -1531,14 +1526,20 @@ ul.tier--list {
 
   .sample-slider--btn-right,
   .sample-slider--btn-right-2 {
-    right: 3rem;
+    right: 2.5rem;
     font-size: 2rem;
   }
 
   .sample-slider--btn-left,
   .sample-slider--btn-left-2 {
-    left: 3rem;
+    left: 2.5rem;
     font-size: 2rem;
+  }
+
+  .sample-slider--nav-dot,
+  .sample-slider--nav-dot-2 {
+    padding: 0.35rem;
+    margin: 0 0.75rem;
   }
 
   .expand-slider-icon-sample .expand-outline {
@@ -1547,7 +1548,7 @@ ul.tier--list {
     position: absolute;
     color: var(--clr-med-new);
     bottom: 0.5rem;
-    right: 3.75rem;
+    right: 3.5rem;
     cursor: pointer;
   }
 
